@@ -1,0 +1,24 @@
+PKGNAME := $(shell sed -n "s/Package: *\([^ ]*\)/\1/p" DESCRIPTION)
+PKGVERS := $(shell sed -n "s/Version: *\([^ ]*\)/\1/p" DESCRIPTION)
+PKGSRC  := $(shell basename `pwd`)
+
+all: check clean
+
+docs:
+	Rscript -e 'roxygen2::roxygenise(".")'
+
+build:
+	cd ..;\
+	R CMD build $(PKGSRC)
+
+install:
+	cd ..;\
+	R CMD INSTALL $(PKGNAME)_$(PKGVERS).tar.gz
+
+check: build
+	cd ..;\
+	R CMD check $(PKGNAME)_$(PKGVERS).tar.gz
+
+clean:
+	cd ..;\
+	$(RM) -r $(PKGNAME).Rcheck/
